--- a/connexion/connexion.css
+++ b/connexion/connexion.css
@@ -3,24 +3,34 @@
     padding: 0px;
 }
 
+body{
+    background-color: #131515;
+}
+
 .container {
-    background-color: yellow;
+    background-color: cornflowerblue;
     border-radius: 8px;
+    text-align: center;
 }
 
 .image{
 
 }
 
-.cadre {
+div.cadre {
     width: 65%;
-    background-color: yellowgreen;
     display: flex;
     margin: auto;
     border-radius: 8px;
-    
+    background-color: #83b32b;
+    box-shadow: 5px 5px 5px rgb(83, 83, 83);
+    justify-content: space-between;
 }
 
 img {
     width: 20%;
+}
+
+input, h1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
