--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
-body{
-    background-color: #131515;
+body {
+    background-color: #22333B;
     color:white;
     font-family: calibri;
+    height: 90vh;
+    margin: 0px;
 }
 
-header{
-
+header {
+    padding:;
     width: 100%;
-    height: 5%;
+    height: 10vh;
     display: flex;
     justify-content: space-between;
 }
 
-header .logo{
-
-    width: 8%;
+header .logo {
+    padding-top: 10px;
+    width: 145px;
     margin-left: 25px;
 }
 
@@ -23,14 +25,75 @@ nav ul {
     list-style: none;
 }
 
-nav li{
+nav li {
+    color:  black;
     margin-left: 13px;
     margin-right: 26px;
     font-size: 20px;
+    background-color: white;
+    border-radius: 20px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-.main{
+.main {
 
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    height: 100%;
+}
+
+.flex {
+
+    display: flex;
+}
+
+.cadre {
+
+    height: 400px;
+    width: 400px;
+    background-color: black;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    left: 25px;
+}
+
+.cadre h2 {
+
+    font-size: 35px;
+    color: limegreen;
+
+}
+
+.cadre .position h3,.cadre .destination h3 {
+
+    font-size: 20px;
+    margin: 0px;
+    margin-bottom: 5px;
+    color: limegreen;
+}
+.title,.position,.destination {
+
+    margin-bottom: 30px;
+}
+
+.cadre .position input,.cadre .destination input {
+
+    padding-top: 20px;
+    padding-left: 75px;
+    padding-right: 75px;  
+    border-radius: 15px;
+    border: none;
+}
+
+.carte img{
+
+    width: 600px;
+    height: 400px;
+    border-radius: 15px;
 }
