--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #22333B;
+    background-color: #292F36;
     color:white;
     font-family: calibri;
     height: 90vh;
@@ -15,8 +15,9 @@ header {
 }
 
 header .logo {
-    padding-top: 10px;
-    width: 145px;
+    margin-top: 16px;
+    width: 130px;
+    height: 45px;
     margin-left: 25px;
 }
 
@@ -35,6 +36,7 @@ nav li {
     padding: 5px;
     padding-left: 10px;
     padding-right: 10px;
+    font-weight: bold;
 }
 
 .main {
@@ -61,6 +63,7 @@ nav li {
     align-items: center;
     position: relative;
     left: 25px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .cadre h2 {
@@ -96,4 +99,5 @@ nav li {
     width: 600px;
     height: 400px;
     border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
