--- a/style.css
+++ b/style.css
@@ -1,107 +1,167 @@
 body {
-    background-color: #EC9A29;
-    color:white;
-    font-family: calibri;
-    height: 90vh;
-    margin: 0px;
+    background: var(--bg-color);
+    color: var(--text-color);
 }
 
-header {
-    padding:;
+:root{
+    --bg-color: #FFF;
+    --text-color: #221314;
+    --second-color: #6e54fa;
+    --big-font: 6rem;
+    --h2-font:  3rem;
+    --p-font: 1.1rem;
+}
+
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    list-style: none;
+    scroll-behavior: smooth;
+}
+
+header{
+    position: fixed;
+    top: 0;
+    right: 0;
     width: 100%;
-    height: 10vh;
+    z-index: 1000;
     display: flex;
     justify-content: space-between;
-    background-color: black;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    align-items: center;
+    background: transparent;
+    padding: 30px 16%;
+    transition: ease .40s;
 }
 
-header .logo {
-    margin-top: 16px;
-    width: 130px;
-    height: 45px;
-    margin-left: 25px;
+.logo{
+
+    font-family: 'Orbitron', sans-serif;
+    font-size: 35px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color:  var(--bg-color);
 }
 
 nav ul {
-    display: flex;
-    list-style: none;
-}
-
-nav li {
-    color: black;
-    margin-left: 13px;
-    margin-right: 26px;
-    font-size: 20px;
-    background-color: white;
-    border-radius: 20px;
-    padding: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-weight: bold;
-}
-
-.main {
 
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    height: 100%;
-    background-image: url(Image/sunset.jpg);
-    background-size: contain;
+}
+nav ul li a{
+    color: var(--bg-color);
+    font-size: var(--p-font);
+    font-weight: 500;
+    padding: 10px 22px;
+    border-radius: 4px;
+    transition: ease .40s;
+    margin-left: 2px;
 }
 
-.flex {
+.menu_hover:hover{
 
+     background: var(--bg-color);
+     color: var(--text-color);
+     box-shadow: 5px 10px 30px rgb(85 85 85 /20%);
+     border-radius: 4px;
+}
+
+#user-icon{
+
+    color: var(--bg-color);
+    font-size: 35px;
+    z-index: 1001;
+    cursor: pointer;
+    padding: 5px;
+    transition: ease .40s;
+}
+#user-icon:hover {
+
+    background: var(--bg-color);
+    color: var(--text-color);
+    box-shadow: 5px 10px 30px rgb(85 85 85 /20%);
+    border-radius: 4px;    
+}
+
+#menu-icon {
+    color: var(--bg-color);
+    font-size: 35px;
+    z-index: 1001;
+    cursor: pointer;
+    display: none;
+}
+
+section {
+
+    padding: 80px 18%;
+}
+
+.Home{
+
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-image: url(Image/city2.jpg);
+    background-position: contain;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.cadre {
+.box-travel {
 
     height: 400px;
-    width: 400px;
-    background-color: #292F36;
-    border-radius: 20px;
+    width: 450px;
+    background-color: white;
+    border-radius: 32px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    left: 25px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.cadre h2 {
-
-    font-size: 35px;
-    color: white;
-
-}
-
-.cadre .position h3,.cadre .destination h3 {
-
+.box-travel-div-title {
+    color: var(--p-color);
+    padding: 30px;
     font-size: 20px;
-    margin: 0px;
+
+}
+
+.box-travel-div {
+
+    display: flex;
+}
+
+.box-travel-div-p {
+    color: grey;
+    padding: 20px;
+    font-size: 15px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+
+}
+
+.box-travel-div-p h3 {
+
     margin-bottom: 5px;
-    color: white;
-}
-.title,.position,.destination {
-
-    margin-bottom: 30px;
 }
 
-.cadre .position input,.cadre .destination input {
+.box-travel-div-p input{
 
-    padding-top: 20px;
-    padding-left: 75px;
-    padding-right: 75px;  
-    border-radius: 15px;
-    border: none;
+    padding: 5px 0px;
+    border: 1px solid lightgrey;
+
 }
 
-.carte img{
+#fleche{
+    display: flex;
+    align-items: center;
+    padding-top: 23px;
+}
 
-    width: 600px;
-    height: 400px;
-    border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+.type-vehicule-title {
+
+    padding: 5px;
 }
