--- a/style.css
+++ b/style.css
@@ -119,19 +119,22 @@ section {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    position: relative;
+    z-index: 1001;
 }
 
 .box-travel-div-title {
     color: var(--p-color);
     padding: 30px;
     font-size: 20px;
+    text-align: center;
 
 }
 
 .box-travel-div {
 
     display: flex;
+    justify-content: center;
 }
 
 .box-travel-div-p {
@@ -163,5 +166,82 @@ section {
 
 .type-vehicule-title {
 
-    padding: 5px;
+    padding: 10px 20px;
+    color: grey;
+    font-size: 15px;
+}
+
+.icon {
+
+    font-size: 30px;
+    padding: 10px 15px;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    margin: 0px 10px;
+    border-radius: 5px;
+}
+
+.icon:active {
+
+    font-size: 30px;
+    padding: 10px 15px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    margin: 0px 10px;
+    border-radius: 5px;
+    transition: ease 2s;
+}
+
+.div-type {
+
+    display: flex;
+    justify-content: space-around;
+}
+
+.type-vehicule {
+
+}
+
+.type-vehicule-image {
+
+    display: flex;
+    justify-content: center;
+    padding: 0px 40%;
+}
+
+.flex {
+
+    display: flex;
+    justify-content: center;
+}
+
+.button-go {
+    width: 100px;
+    height: 40px;
+    margin: 40px 0px;
+    background-color: var(--bg-color);
+    border: none;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    text-decoration: none;
+}
+
+.button-go p {
+    font-family: 'Poppins', sans-serif;
+}
+
+.button-go:active {
+
+    box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+
+/* CSS direction finish */
+
+.maps img{
+    position: relative;
+    right: 50px;
+    top: 2px;
+    width: 800px;
+    height: 400px;
+    z-index: 1000;
+    border-radius: 32px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;    
 }
