--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
     --bg-color: #FFF;
     --text-color: #221314;
     --second-color: #6e54fa;
-    --big-font: 6rem;
-    --h2-font:  3rem;
+    --big-font: 3rem;
+    --h2-font:  2.5rem;
     --p-font: 1.1rem;
 }
 
@@ -27,13 +27,25 @@ header{
     top: 0;
     right: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 2000;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background: transparent;
     padding: 30px 16%;
     transition: ease .40s;
+}
+
+header.sticky {
+
+    background: var(--bg-color);
+    padding: 10px 14%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.sticky nav ul li a, .sticky .logo, .sticky #user-icon {
+
+    color: var(--text-color);
 }
 
 .logo{
@@ -92,6 +104,8 @@ nav ul li a{
     cursor: pointer;
     display: none;
 }
+
+/* Home */
 
 section {
 
@@ -244,4 +258,55 @@ section {
     z-index: 1000;
     border-radius: 32px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;    
+}
+
+
+/* Information */
+
+.informations {
+
+    width: 100%;
+    height: 85vh;
+
+}
+
+.informations_title {
+
+    padding-top: 100px;
+    font-size: var(--h2-font);
+}
+
+
+.informations_text {
+
+    width: 600px;
+    text-align: justify;
+}
+
+.informations_container {
+
+    display: flex;    
+    padding-top: 60px;
+}
+
+.informations_img {
+
+
+}
+
+.row {
+
+    display: flex;
+}
+
+.box_img {
+
+
+    border: 1px solid black;
+    padding: 20px;
+}
+
+.icon_informations{
+
+    font-size: 70px;
 }
