--- a/Connexionchauffeur/chauffeur.css
+++ b/Connexionchauffeur/chauffeur.css
@@ -108,11 +108,13 @@ nav ul li a{
 }
 
 .container{
+    margin-top: 50px;
     position: relative;
     overflow: hidden;
     background-color: #FFF;
     width: 60%;
     height: 60%;
+    min-height: 500px;
     border-radius: 32px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     transition: ease .40s;
@@ -126,8 +128,7 @@ nav ul li a{
 }
 
 .sign-up-container{
-    right: 0;
-    width: 50%;
+    width: 100%;
 }
 
 .log-in-container{
@@ -142,7 +143,7 @@ nav ul li a{
 }
 
 input.np{
-    width: 47%;
+    width: 49%;
 }
 
 #inscription{
@@ -152,6 +153,7 @@ input.np{
     font-size: 35px;
     color: #00203f;
     margin-bottom: 70x;
+    margin-top: -20px;
 }
 
 form{
@@ -159,6 +161,15 @@ form{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    padding: 0 50px;
+    height: 100%;
+    text-align: center;
+}
+
+form2{
+    background-color: #FFF;
+    display: flex;
     flex-direction: column;
     padding: 0 50px;
     height: 100%;
@@ -280,4 +291,21 @@ h1.accroche{
     font-family: 'Poppins', sans-serif;
     color: #FFF;
     margin-bottom: 75px;
+}
+
+.insc{
+    background-color: #ffffff;
+}
+
+.haut{
+    left: 0;
+    display: flex;
+    align-items: center;
+    margin: 10px 0px 0px 10px;
+}
+
+.retour{
+    color: black;
+    text-decoration: underline;
+    margin-bottom: 0px;
 }
