--- a/connexion/connexion2.css
+++ b/connexion/connexion2.css
@@ -107,14 +107,18 @@ nav ul li a{
 }
 
 .container{
+    margin-top: 50px;
     position: relative;
     overflow: hidden;
     background-color: #FFF;
     width: 60%;
     height: 60%;
+    min-height: 500px;
     border-radius: 32px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     transition: ease .40s;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .form-container {
@@ -278,4 +282,11 @@ h1.accroche{
     font-family: 'Poppins', sans-serif;
     color: #FFF;
     margin-bottom: 75px;
+}
+
+.connexionChauffeur{
+    color: rgb(58, 55, 55);
+    margin-bottom: -100px;
+    font-size: x-small;
+    text-decoration: underline;
 }
