--- a/MonCompte/MonCompte.css
+++ b/MonCompte/MonCompte.css
@@ -1,6 +1,8 @@
 body {
     background: var(--bg-color);
     color: var(--text-color);
+    height: 100vh;
+    background-image: url(images/city2.jpg);
 }
 
 :root{
@@ -105,11 +107,14 @@ nav ul li a{
     display: none;
 }
 
+section {
+
+    padding: 40px 5%;
+}
+
 .monCompte {
     position: relative;
     width: 100%;
-    height: 100vh;
-    background-image: url(images/city2.jpg);
     background-position: contain;
     display: flex;
     justify-content: center;
@@ -117,6 +122,8 @@ nav ul li a{
 }
 
 .container {
+    position: relative;
+    
     width: 65%;
     height: 600px;
     
