--- a/Recherche/style.css
+++ b/Recherche/style.css
@@ -29,6 +29,7 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 7vh;
 }
 
 .logo{
@@ -51,7 +52,9 @@ header{
     height: 100px;
     border-bottom: 1px lightgrey solid;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    height: 11vh;
 }
 .search{
 
@@ -92,6 +95,11 @@ header{
     margin-right: 40px;
 }
 
+.flex{
+
+    display: flex;
+}
+
 .icon {
     margin-top: 20px;
     font-size: 30px;
@@ -111,13 +119,60 @@ header{
     transition: ease 2s;
 }
 
+.container{
+
+
+}
+
 .container-left{
 
-    width: 50%;
+    width: 50vw;
     border-right: 1px lightgrey solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 3%;
+}
+
+.choice-car{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    width: 70%;
+    
+    border: 1px lightgrey solid;
+    height: 20%;
+    border-radius: 15px;
+    margin-bottom: 4%;
+    display: flex;
+    align-items: center;
+}
+
+.choice-car img{
+
+    border-radius: 50%;
+    width: 18%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.icon2{
+
+   font-size: 130%;
+   margin-right: 1%;
 }
 
 .container-right{
 
+    height: 82vh;
+    width: 50vw;
+    border-left: 1px lightgrey solid;
+}
 
+.maps{
+
+    height: 50%;
+}
+.maps img {
+
+    height: 100%;
+    width: 100%;
 }
