ajout message d'erreur php

--- a/connexion/connexion2.css
+++ b/connexion/connexion2.css
@@ -260,7 +260,7 @@ p{
     line-height: 20px;
     letter-spacing: 0.5px;
     margin: 20px 0 30px;
-    margin-bottom: 100px;
+    /*margin-bottom: 100px;*/
 }
 
 button.ghost{
@@ -289,4 +289,10 @@ h1.accroche{
     margin-bottom: -100px;
     font-size: x-small;
     text-decoration: underline;
+}
+
+.alert{
+    margin-bottom: 0px;
+    margin-top: 10px;
+    color: red;
 }
