--- a/connexion/connexion2.css
+++ b/connexion/connexion2.css
@@ -260,7 +260,7 @@ p{
     line-height: 20px;
     letter-spacing: 0.5px;
     margin: 20px 0 30px;
-    /*margin-bottom: 100px;*/
+    margin-bottom: 100px;
 }
 
 button.ghost{
