--- a/connexion/connexion2.css
+++ b/connexion/connexion2.css
@@ -260,7 +260,7 @@ p{
     line-height: 20px;
     letter-spacing: 0.5px;
     margin: 20px 0 30px;
-    margin-bottom: 100px;
+    margin-bottom: 10px;
 }
 
 button.ghost{
@@ -287,7 +287,7 @@ h1.accroche{
 .connexionChauffeur{
     color: rgb(58, 55, 55);
     margin-bottom: -100px;
-    font-size: x-small;
+    font-size: small;
     text-decoration: underline;
 }
 
