--- a/Recherche/style.css
+++ b/Recherche/style.css
@@ -230,78 +230,127 @@ form .deco .bxs-user-account{
     border-left: 1px lightgrey solid;
 }
 
-.maps{
+#mapid{
 
-    height: 50%;
+    height: 50%;;
 }
-.maps img {
 
-    height: 100%;
-    width: 100%;
+#mapid img{
+
+    height: 45vh;
 }
+
 .description-right{
 
     height: 50%;
+    padding: 10px 0px;
+}
+
+.ligne1{
+
     display: flex;
+    height: 50%;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.left{
+.box1, .box2, .box3 {
+    
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    height: 95%;
+    width: 22%;
+    border-radius: 8%;
+    display: flex;
 
-    width: 50%;
-    height: 100%;
-    border-right: 1px solid lightgrey;
 }
 
-.text-right{
 
-    border-bottom: 1px solid lightgrey;
+
+.box1, .box2{
+    display: flex;
+    font-size: 30px; 
+    justify-content: center;
+    align-items: center;
+}
+
+.color1{
+    font-size: 50px;
+    color:#9370DB ;
+}
+
+.color2{
+    padding-left: 10px;
+    color: grey;
+    font-size: 30px; 
+}
+.box3 {
+
+    width: 40%;
+}
+
+.box3-1{
+
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 25%;
+    padding: 0px 10px;
 }
 
-.left img{
-
-    height: 73%;
-    width: 100%;
-}
-
-.right{
-
-    height: 100%;
-    width: 100%;
-}
-
-.cpt{
-
-   height: 35%; 
-   border-bottom: 1px solid lightgrey;
-   display: flex;
-}
-
-.border{
-
-    border-right: 1px solid lightgrey;
-    width: 33%;
+.box3-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 17px;
+    border-left: 1px solid lightgrey;
+    padding: 10px;
     text-align: center;
 }
 
-.text-right-bottom {
+.ligne2{
 
-   margin-right: 7%;
-   font-size: 350%;
-   color: #9370DB;
-}
-
-.star{
+    height: 50%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    height: 65%;
 }
 
-.star img {
-    width: 15%;
-    height: 35%;
+.chauffeur{
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    border: none;
+    height: 95%;
+    margin: 0px;
+    width: 45%;
+}
+
+.paiement{
+    display: flex;
+    align-items: center;
+    height: 95%;
+    width: 45%;
+}
+
+.paiement button {
+
+    height: 40%;
+    width: 100%;
+    background-color: #9370DB;
+    border-radius: 15px;
+    font-family: calibri;
+    font-size: 20px;
+    font-weight: 30px;
+    border: none;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.paiement button:active {
+
+    height: 40%;
+    width: 100%;
+    background-color: #9370DB;
+    border-radius: 15px;
+    font-family: calibri;
+    font-size: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    transition: ease 2s;
 }
